# whisper-keys

./: package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio_manager.rs  commands.rs  config_template.json5  key_listener.rs  lib.rs  main.rs  mechvibes.rs  packs.rs  state.rs
src/routes/: +page.svelte  +page.ts
