[package]
name = "whisper-keys"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whisper_keys_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { git = "https://github.com/rustdesk-org/rdev.git" }
rodio = "0.19.0"
json5 = "0.4.1"
rayon = "1.10.0"
home = "0.5.9"
anyhow = "1.0.93"
kira = "0.9.6"
